third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/add_assign/union.rs
#[derive(derive_more::AddAssign)]
union IntOrFloat {
    i: u32,
}

fn main() {}
